client/src/css/App.css
.container {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
}

.classroom-container {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	/* Centres the flexbox items */
	margin: 15px auto;
	/* Adds a bit of a gap between the flexbox items */
	gap: 50px;
}

.classroom-heading {
	text-align: center;
	margin-bottom: 5px;
	font-weight: bold;
}

.student-item {
	margin: 5px 10px;
	border-radius: 5px;
	transition: all .15s linear;
}

.student-name {
	display: inline-block;
	width: 160px;
	margin-left: 15px;
	text-align: left;
}

.student-item.highlight {
	background-color: #FFBF00;
}

#no-rego {
	transition: all .5s;
	max-height: 0;
	padding: 0 15px;
	border: 0;
	overflow: hidden;
}

#no-rego.display {
	max-height: 100px;
	padding: 15px;
	height: auto;
}

